--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -70,13 +70,13 @@
   <div class="details-card with-logo">
     <h3>#mytinyatlasLONDON</h3>
     <div class="sidebar">
-      <p class="info">
+      <p class="info" style="width:160px">
         <span class="label">When</span><br />
         July 21<br />
         6-9 PM<br />
         Until SEP 3
       </p>
-      <p class="info">
+      <p class="info" style="width:160px">
         <span class="label">Where</span><br />
         Dulwich Picture Gallery<br />
         Gallery Rd<br />
@@ -84,7 +84,7 @@
         UK
       </p>
     </div>
-    <div class="main-content">
+    <div class="main-content"style="width:520px">
       <p>To celebrate the Kickstarter launch of our new camera bag, Solas, Tiny Atlas Quarterly curated a print photography show at Alite Design’s Outpost in the Mission, SF.  </p>
       <p>Light, the defintion of Solas in Gaelic, was the show’s theme and more than 9,OOO images were submitted from TAQ’s Instragram community with the #mytinyatlasSOLAS.  Guest curated by Creative Director, Cory Jacobs, and TAQ’s own Emily Nathan, the following selects were printed for the show, in partnership with printing partner <a href="https://www.socialprintstudio.com/">Social Print Studios</a>.</p>
       <p><a href="https://www.kickstarter.com/projects/tinyatlas/tiny-atlas-solas-a-casual-camera-bag-for-photograp">Visit the Kickstarter</a></p>
