--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -64,7 +64,7 @@
         </div>
 
   <div id="tahiti" class="img-head" style= "height: 600px; background-image: url(images/london-bg.jpg)">
-    <img src="images/london-logo.png" alt="My Tiny Atlas London" class="logo">
+    <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo">
   </div>
 
   <div class="details-card with-logo">
@@ -72,22 +72,35 @@
     <div class="sidebar">
       <p class="info" style="width:160px">
         <span class="label">When</span><br />
-        July 21<br />
-        6-9 PM<br />
-        Until SEP 3
+        July 19th<br />
+        - 22nd
       </p>
       <p class="info" style="width:160px">
         <span class="label">Where</span><br />
-        Dulwich Picture Gallery<br />
-        Gallery Rd<br />
-        Southwark SE21 7AD<br />
-        UK
+        Shoreditch, Croydon,<br />
+        Dulwich, Greenwich<br />
+        London - United Kingdom
       </p>
     </div>
     <div class="main-content"style="width:520px">
-      <p>To celebrate the Kickstarter launch of our new camera bag, Solas, Tiny Atlas Quarterly curated a print photography show at Alite Design’s Outpost in the Mission, SF.  </p>
-      <p>Light, the defintion of Solas in Gaelic, was the show’s theme and more than 9,OOO images were submitted from TAQ’s Instragram community with the #mytinyatlasSOLAS.  Guest curated by Creative Director, Cory Jacobs, and TAQ’s own Emily Nathan, the following selects were printed for the show, in partnership with printing partner <a href="https://www.socialprintstudio.com/">Social Print Studios</a>.</p>
-      <p><a href="https://www.kickstarter.com/projects/tinyatlas/tiny-atlas-solas-a-casual-camera-bag-for-photograp">Visit the Kickstarter</a></p>
+      <p>London; one of the most loved cities in the world, and through the eyes of the Tiny Atlas Quarterly community we bought #mytinyatlasLondon to life.</p>
+      <p>With thanks to our friends: <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fujfilm Instax North America</a>, <a href="https://wowair.us" target="_blank">WOW air</a>,
+      <a href="https://shop.paperchasepress.com" target="_blank">Paper Chase Press</a>,
+      <a href="https://www.ohanacommunications.com" target="_blank">Ohana Communications</a>,
+      <a href="http://www.theproducer.com" target="_blank">The Producer</a>,
+      <a href="http://www.visitlondon.com" target="_blank">Visit London</a>,
+      <a href="http://www.visitgreenwich.org.uk" target="_blank">Visit Greenwich</a>,
+      <a href="https://www.croydon.gov.uk" target="_blank">Croydon Council</a>,
+      <a href="https://www.rise-gallery.co.uk" target="_blank"> Rise Gallery</a>,
+      <a href="https://www.gojourny.com" target="_blank">Journy</a>,
+      <a href="https://www.desertretreater.com" target="_blank">Sean Spellman</a>,
+      <a href="https://www.thened.com" target="_blank"></a>,
+      <a href="https://londonliverpoolstreet.andaz.hyatt.com/en/hotel/home.html" target="_blank">ANdAZ London</a>, and
+      <a href="http://www.dulwichpicturegallery.org.uk" target="_blank">the Dulwich Picture Gallery</a>.
+      </p>
+
+
+
 
     </div>
 
