--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -63,8 +63,8 @@
             </div>
         </div>
 
-  <div id="tahiti" class="img-head" style= "height: 600px; background-image: url(images/london-bg.jpg)">
-    <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo">
+  <div id="tahiti" class="img-head" style= "height: 650px; background-image: url(images/london-bg-v2.jpg)">
+    <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;">
   </div>
 
   <div class="details-card with-logo">
@@ -72,8 +72,7 @@
     <div class="sidebar">
       <p class="info" style="width:160px">
         <span class="label">When</span><br />
-        July 19th<br />
-        - 22nd
+        July 19th - 22nd
       </p>
       <p class="info" style="width:160px">
         <span class="label">Where</span><br />
@@ -98,6 +97,8 @@
       <a href="https://londonliverpoolstreet.andaz.hyatt.com/en/hotel/home.html" target="_blank">ANdAZ London</a>, and
       <a href="http://www.dulwichpicturegallery.org.uk" target="_blank">the Dulwich Picture Gallery</a>.
       </p>
+      <p></p>
+      <p></p>
 
 
 
