--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div id="tahiti" class="img-head" style="height: 650px; background-image: url(images/london-bg-v2.jpg)">
-        <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px; width:300px;">
+        <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px; width:300px; max-width: 32%;">
     </div>
 
     <div class="details-card with-logo">
@@ -88,7 +88,7 @@
                 <span class="label">Where</span><br /> Shoreditch, Croydon,<br /> Dulwich, Greenwich<br /> London - United Kingdom
             </p>
         </div>
-        <div class="main-content" style="width:520px">
+        <div class="main-content" style="max-width:520px">
             <p>London; one of the most loved cities in the world, and through the eyes of the Tiny Atlas Quarterly community we bought #mytinyatlasLondon to life.</p>
             <p>With thanks to our friends: <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fujfilm Instax North America</a>, <a href="https://wowair.us" target="_blank">WOW air</a>,
                 <a href="https://shop.paperchasepress.com" target="_blank">Paper Chase Press</a>,
