--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -709,11 +709,11 @@
                 <p>thestyletune</p>
             </a>
         </div>
-        <div class="gram">
+        <!-- <div class="gram">
             <a href="http://instagram.com/hellopoe" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/hellopoe.jpg" alt="photography by hellopoe">
                 <p>hellopoe</p>
             </a>
-        </div>
+        </div> -->
         <div class="gram">
             <a href="http://instagram.com/dy_ellie" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/dy_ellie-1.jpg" alt="photography by dy_ellie">
                 <p>dy_ellie</p>
